# qtadmin

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG-human.md  CHANGELOG.md  CONTRIBUTING.md  Current-Progress.md  README.md  ROADMAP.md  STATUS.md  TASK.md  _toc.yml  flutter.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.githooks/: pre-commit
.github/workflows/: cli.yml  dart-check.yml  dart-publish.yml  deploy-docs.yml  deploy-studio.yml  deploy.yml  provider.yml  studio.yml
.quanttide/devops/: contract.yaml
app/: main.py
assets/fixtures/: metadata.json
docs/: myst.yml
docs/add/: README.md  architecture.md  hr-email-import.md  index.md  multi-tenant.md  qtclass-architecture.md  qtclass.md  qtconsult.md  tech-stack.md
docs/assets/: README.md
docs/brd/: index.md  qtconsult.md
docs/default/: README.md  agent.md  asset.md  audit.md  cli.md  code.md  config.md  default.md  iam.md  index.md  knowl.md  meta.md  mr.md  openclaw.md  security.md  think.md  work.md
docs/dev/: README.md  finance-integration-plan.md  index.md  studio.md  work_journal.md
docs/drd/: README.md  dashboard.md  metadata.md  org.md  qtclass.md  qtconsult.md  thinking.md
docs/ixd/: index.md  navigation-architecture.md  navigation.md  panorama.md  (+1 more)
events/: README.html
examples/: README.md  ollama_install.py
examples/human/: Cargo.toml  README.md
examples/human/src/: main.rs
intergrated_tests/: test_system.py
manifests/: README.md
personas/: README.html
qtadmin-human-cli/: .gitignore  pyproject.toml
qtadmin-human-cli/src/qtadmin/: __init__.py  __main__.py  api_client.py  classifier.py  cli.py  config.py  lark_client.py  mail_sender.py
qtadmin-human-cli/tests/: test_api_client.py  test_classifier.py  test_cli.py  test_config.py  test_lark_client.py
qtadmin_provider/: __main__.py
quanttide-hr-toolkit-main/: .gitignore
quanttide-hr-toolkit-main/integrations/feishu/: README.md  install-mail-ingest-service.sh  install-mail-sender-service.sh  mail-ingest.service  mail_sender.service  pyproject.toml
quanttide-hr-toolkit-main/integrations/feishu/src/feishu_integration/: __init__.py  classifier.py  mail_ingest_loop.py  mail_reader.py  mail_sender.py  mail_sender_loop.py  pipeline_writer.py
quanttide-hr-toolkit-main/integrations/feishu/tests/: test_classifier.py
scenarios/: README.html
scripts/: install_ollama.sh  record-studio-linux.sh  run-studio-linux.sh  upload_oss.py
src/cli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ROADMAP.md  TODO.md  lcov.info  p40-report.md  p40-results.json  pyproject.toml  qtrecurit.toml
src/cli/app/: cli.py
src/cli/app/asset/: __init__.py  audit.py  backup.py  refresh.py
src/cli/app/human/: lark_client.py
src/cli/docs/dev/: asset_audit.md  asset_backup.md  asset_refresh.md
src/cli/docs/ops/: asset_audit.md  asset_backup.md  asset_refresh.md
src/cli/docs/qa/: asset_backup.md  asset_refresh.md
src/cli/docs/user/: asset_backup.md  asset_refresh.md
src/cli/integrated_tests/: __init__.py  test_audit_integration.py  test_backup_integration.py  test_refresh_integration.py
src/cli/src/: cli.rs  cli_config.rs  git_utils.rs  main.rs  provider.rs
src/cli/src/app/asset/: refresh.py
src/cli/src/asset/: archive.rs  audit.rs  backup.rs  evaluate.rs  mod.rs  quality.rs  status.rs
src/cli/src/auth/: mod.rs  perm.rs  user.rs
src/cli/src/business/: mod.rs  quotation.rs  quote.rs  status.rs
src/cli/src/connect/: lark.rs  mod.rs  notice.rs
src/cli/src/connect/email/: lark.rs
src/cli/src/connect/lark/: mail.rs
src/cli/src/human/: config.rs  mod.rs  position.rs  status.rs
src/cli/src/knowl/: acquire.rs  acquire_test.rs  extract.rs  mod.rs
src/cli/src/project/: mod.rs  status.rs
src/cli/src/qtadmin/: __init__.py  __main__.py  api_client.py  classifier.py  cli.py  config.py  lark_client.py  mail_sender.py
src/cli/src/qtadmin_cli/: cli.py
src/cli/src/qtclass/: mod.rs  status.rs
src/cli/src/qtcloud/: mod.rs  status.rs
src/cli/src/qtconsult/: mod.rs  status.rs
src/cli/src/qtdata/: mod.rs  status.rs
src/cli/src/qtrecurit/: config.rs  connect.rs  human.rs  mod.rs  status.rs
src/cli/tests/: test_audit.py  test_audit.rs  test_backup.py  test_backup.rs  test_business.rs  test_commands.rs  test_contract.rs  test_knowl.rs  test_project.rs  test_qtrecurit.rs  test_refresh.py
stories/: README.html
terraform/: outputs.tf
tests/: conftest.py  test_contract.py  test_human.py  test_integration.py  test_network.py  test_ollama_install.py
(+362 files in other folders)
