[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# name it as your package name
name = "qtadmin-provider"
# semetric versions
version = "0.0.1"
# describe the package within one sentence
description = "量潮管理后台服务端"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.10'
dependencies = [
    "dynaconf>=3.2.5",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]
# dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]

[tool.pdm.build]
includes = [
    "qtadmin_provider",
]

[tool.pdm.scripts]
dev = "pdm run uvicorn qtadmin_provider.main:app --reload --host 0.0.0.0 --port 8001"
test.cmd = "pytest"
test.help = "Run tests with pytest"
