[project]
name = "qtadmin"
version = "0.0.2-alpha.1"
description = "QuantTide Admin"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "lark-oapi>=1.5.3",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
qtadmin = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
where = ["src/cli"]

[tool.setuptools.package-dir]
"" = "src/cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
