[project]
name = "qtadmin"
version = "2.0.0"
description = "HR recruitment email classification CLI — wraps lark-cli"
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "httpx>=0.27",
]

[project.scripts]
qtadmin = "qtadmin.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
