[package]
name = "qtadmin-cli"
version = "0.0.15"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
walkdir = "2"
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
serde_yaml = "0.9"
quanttide-agent = "0.1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[[bin]]
name = "qtadmin"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
